--- a/Photo4All/.classpath
+++ b/Photo4All/.classpath
@@ -6,5 +6,7 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/ZBarScannerActivity"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
+	<classpathentry kind="lib" path="libs/universal-image-loader-1.9.2-SNAPSHOT-with-sources.jar"/>
+	<classpathentry kind="lib" path="libs/android-support-v4.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
